bug(fix): fix line height for recipe of the day

--- a/ui/index.html
+++ b/ui/index.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="card card-grid">
-      <img class="card-img" src="https://cdn.pixabay.com/photo/2019/02/03/11/21/waffles-3972360__340.jpg" alt="recipe"
+        <img class="card-img" src="https://cdn.pixabay.com/photo/2019/02/03/11/21/waffles-3972360__340.jpg" alt="recipe"
           style="width:100%" />
         <div class="card-container">
           <h4 class="center"><b>Louise Cupcakes</b></h4>
@@ -113,7 +113,7 @@
     <div class="daily-recipe">
       <div class="recipe-item">
         <p class="text-large center">Steak</p>
-        <p class="center">
+        <p class="center text-height">
           To crest usadu ladbh ahdgal u dfbldkf vlsbdl s1-headersd dfidf
           dufkhb dfdub erflugbr erf ffjbfbd fuirood fudfheo furhfeobbf fuf
           furhfeobbfre fdin gnj gnjg figior jbs sdlbsj dfjf sldf vlfdgvbsl
