feat(recipe): create and style recipe page

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,11 +23,13 @@
           <a class="footer-link" href=""><b>Recipes</b></a>
           <a class="footer-link" href=""><b>Contact</b></a>
           <a class="footer-link" href=""><b>Login</b></a>
-          <a class="btn-small btn-transparent" href="#">Sign Up</a>
+          <a class="btn-inline btn-medium btn-transparent" href="#">Sign Up</a>
         </div>
       </nav>
       <div id="h2">
-        <h1 class="white text-xxl center">Explore our collection of over 1000 recipes to find the perfect dish</h1>
+        <h1 class="white text-xxl center d-text">Explore our collection of over 1000 recipes
+          to find the perfect dish
+        </h1>
       </div>
     </header>
   </section>
@@ -41,7 +43,7 @@
         <div class="card-container">
           <h4 class="center"><b>Strawberry Compote</b></h4>
           <p class="center">By Christopher Reeves</p>
-          <button class="btn btn-small">View Recipe</button>
+          <a href="pages/recipe.html" class="btn btn-medium">View Recipe</a>
         </div>
       </div>
 
@@ -51,7 +53,7 @@
         <div class="card-container">
           <h4 class="center"><b>Louise Cupcakes</b></h4>
           <p class="center">By James Brown</p>
-          <button class="btn btn-small">View Recipe</button>
+          <a href="pages/recipe.html" class="btn btn-medium">View Recipe</a>
         </div>
       </div>
 
@@ -61,7 +63,7 @@
         <div class="card-container">
           <h4 class="center"><b>Green Club Sandwich</b></h4>
           <p class="center">By Oreva Edafe</p>
-          <button class="btn btn-small">View Recipe</button>
+          <a href="pages/recipe.html" class="btn btn-medium">View Recipe</a>
         </div>
       </div>
 
@@ -71,7 +73,7 @@
         <div class="card-container">
           <h4 class="center"><b>Green Club Sandwich</b></h4>
           <p class="center">By Oreva Edafe</p>
-          <button class="btn btn-small">View Recipe</button>
+          <a href="pages/recipe.html" class="btn btn-medium">View Recipe</a>
         </div>
       </div>
 
@@ -81,7 +83,7 @@
         <div class="card-container">
           <h4 class="center"><b>Green Club Sandwich</b></h4>
           <p class="center">By Oreva Edafe</p>
-          <button class="btn btn-small">View Recipe</button>
+          <a href="pages/recipe.html" class="btn btn-medium">View Recipe</a>
         </div>
       </div>
       <div class="card card-grid">
@@ -90,7 +92,7 @@
         <div class="card-container">
           <h4 class="center"><b>Green Club Sandwich</b></h4>
           <p class="center">By Oreva Edafe</p>
-          <button class="btn btn-small">View Recipe</button>
+          <a href="pages/recipe.html" class="btn btn-medium">View Recipe</a>
         </div>
       </div>
 
@@ -100,11 +102,11 @@
         <div class="card-container">
           <h4 class="center"><b>Green Club Sandwich</b></h4>
           <p class="center">By Oreva Edafe</p>
-          <button class="btn btn-small">View Recipe</button>
+          <a href="pages/recipe.html" class="btn btn-medium">View Recipe</a>
         </div>
       </div>
     </div>
-    <button class="center btn btn-small">View More</button>
+    <a class="href="pages/recipe.html" center btn btn-medium">View More</a>
   </section>
 
   <!-- Recipe -->
@@ -120,7 +122,7 @@
           vjsl dfeiogr vlreifgb vuid csuidfb vd null and void, so you see
           that's all
         </p>
-        <button class="btn btn-small btn-transparent">View More</button>
+        <a href="pages/recipe.html" class="btn btn-medium btn-transparent">View More</a>
       </div>
     </div>
   </section>
